Iniciando Create Account

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@
   justify-content: center;
   margin-top: 100px;
 }
+
+.button-container {
+  display: flex;
+  justify-content: center; 
+  gap: 10px;
+}
+
+.align-button {
+  width: 50%;
+}
