--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,17 @@
 .align-button {
   width: 50%;
 }
+
+.photo-preview-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.photo-preview {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ccc;
+}
