--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,8 +1,8 @@
 .App {
-  display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 100px !important;
+  margin: 0 auto;
 }
 
 .button-container {
