--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -6,14 +6,11 @@ html {
     height: 100%;
     font-family: Arial, sans-serif;
     background-color: #fff;
-    /* Cor de fundo geral */
 }
 
-/* Estilização do cabeçalho */
 .header {
     width: 100%;
-    background-color: #87CEEB;
-    /* Azul claro */
+    background-color: #0069D9;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -21,19 +18,16 @@ html {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Título do cabeçalho */
 .header h3 {
     margin: 0;
     color: #fff;
 }
 
-/* Estilo para o container do usuário */
 .user-container {
     display: flex;
     align-items: center;
 }
 
-/* Imagem do usuário */
 .user-container img {
     width: 40px;
     height: 40px;
@@ -41,18 +35,15 @@ html {
     margin-right: 10px;
 }
 
-/* Link do editar perfil */
 .user-container a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
 }
 
-/* Estilização do rodapé */
 .footer {
     width: 100%;
-    background-color: #87CEEB;
-    /* Azul claro */
+    background-color: #0069D9;
     text-align: center;
     padding: 15px;
     position: fixed;
