--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -5,6 +5,13 @@
   margin: 0 auto;
 }
 
+.App-feed {
+  align-items: center;
+  justify-content: center;
+  margin-top: 82px !important;
+  margin: 0 auto;
+}
+
 .button-container {
   display: flex;
   justify-content: center; 
