--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -545,8 +545,10 @@ html {
 }
 
 .profile-name-section .get-verified-link-simple {
-    font-size: 16px;
+    font-size: 18px;
     margin-left: 12px;
+     font-weight: 700; /* ou 800, 900 para mais grossura */
+    text-decoration: none;
 }
 
 .loading-verified {
